# swarm-backend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  MANIFEST.md  README.md  SimplePod-Launcher.bat  SimplePod-Launcher.vbs  config.yaml  delegate.py  docker-compose.yml  etsy_vault.json  example.py  implementation_plan.txt  main.py  models.py  project_launcher.py  pyproject.toml  remote_node.py  requirements.txt  setup.py  shadow-pc-deploy.bat  shadow-pc-start.bat  shadow_node.py  test_distributed.py  user_activity_tracker.py
agents/: base.py  swarm_orchestrator.py
api/: routes.py
assets/: logo_gen.py
bridge/: llm_worker.py
bridge/cloud/: __init__.py  cloud_router.py  cost_tracker.py
bridge/cloud/providers/: __init__.py  anthropic_connector.py  base.py  google_connector.py  openai_connector.py
bridge/discovery/: discovery_client.py  discovery_daemon.py  endpoint_catalog.py  health_checker.py
bridge/mesh/: mesh_configurator.py  node_registry.py  tunnel_manager.py
bridge/mesh/scripts/: setup_tailscale.ps1  setup_wireguard.sh
core/: autonomy_engine.py  browser_screenshot.py  change_tracker.py  config.py  file.py  mass_agent_swarm.py  model_router.py  orbstudio_hardware.py  orbstudio_thermal.py  session_store.py  swarm_state.py  token_tracker.py  tool_executor.py
core/backup/: __init__.py  backup_cli.py  backup_engine.py  safe_file_ops.py
core/data/: weather_data.csv  weather_data_v2.csv
core/simpleswarm/: __init__.py  computer_controller.py  plan_creator.py  react_agent.py  remote_client.py  simple_swarm_orchestrator.py  swarm_coder.py  test_harness.py  test_runner.py  web_search.py
core/sitk/: __init__.py  sitk_deployer.py  sitk_executor.py  sitk_orchestrator.py  sitk_packager.py
dir1/: __init__.py
firmware/esp32_tank_controller/: esp32_tank_controller.ino
integrations/: claude.py  gemini.py  llm.py  openai_compatible.py  weather.py
interfaces/twilio_gateway/: auth_manager.py  command_parser.py  response_builder.py  twilio_client.py  webhook_server.py
interfaces/twilio_gateway/templates/: status_mms.html
interfaces/vscode_extension/: package.json  tsconfig.json
interfaces/vscode_extension/src/: extension.ts
interfaces/vscode_extension/src/api/: client.ts
interfaces/vscode_extension/src/panels/: ControlPanel.ts  DashboardPanel.ts
interfaces/vscode_extension/src/providers/: AgentTreeProvider.ts  NodeTreeProvider.ts  TransferTreeProvider.ts
interfaces/web_ui/: settings.json
interfaces/web_ui/backend/: __init__.py  config.py  dependencies.py  main.py  models.py  settings_store.py
interfaces/web_ui/backend/routers/: __init__.py  billing.py  billing_db.py  code_quality.py  hardware.py  mesh.py  mesh_remote.py  nodes.py  notifications.py  orbstudio.py  projects.py  remote.py  routing.py  screenshot.py  settings.py  simpleswarm.py  sitk.py  stripe_integration.py  swarm.py  swarm_coder.py  telemetry.py
interfaces/web_ui/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
interfaces/web_ui/frontend/src/: App.tsx  index.css  main.tsx
interfaces/web_ui/static/: index.html
interfaces/web_ui/static/css/: dashboard.css
interfaces/web_ui/static/js/: dashboard.js
interfaces/web_ui/static/react/: index.html
marketplace_tasks/ab479c91-ecd6-4b9f-aa69-32b1e92a36f6/: app.py  database.py  models.py  requirements.txt  routes.py  schemas.py
marketplace_tasks/c4aedb2a-e25b-4b68-80a6-75b657a46e9c/: README.md` or similar documentation file  converter.py  main.py  requirements.txt
marketplace_tasks/f67081c2-d7ff-45f6-b968-507322d54699/: bot.py  cogs.py  config.json  news_api.py  requirements.txt  summarizer.py
modes/: agent_mode.py  ask_mode.py  plan_mode.py  swarm_mode.py
routing/: __init__.py  complexity_scorer.py  load_balancer.py  main_breaker.py  tier_manager.py
scripts/: bootstrap_mesh.sh  kimi_resume.py  reload_vscode.ps1  start_swarm.ps1  start_swarm.sh
src/services/api/: apiService.js  dataLoader.js
swarm/: orchestrator_bridge.py
swarm/memory/: __init__.py  agent_registry.py  context_manager.py  memory_bus.py  state_serializer.py
swarm/reallocation/: bottleneck_detector.py  execution_graph.py  migration_engine.py  reallocation_controller.py
swarm/telemetry/: adaptive_optimizer.py  telemetry_analyzer.py  telemetry_dashboard_data.py  telemetry_logger.py
tests/: conftest.py  test_api.py  test_backup_engine.py  test_discovery_daemon.py  test_integration.py  test_main_breaker.py  test_sitk_packager.py
utils/: math_utils.py
(+52 files in other folders)
