[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplepod-surgical-strike-swarm"
version = "2.6.0"
description = "Distributed, highly resilient Agentic Swarm Architecture bridging cloud, edge, and hybrid LLM infrastructures."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "SimplePod Swarm Maintainers" },
]
keywords = [
    "agentic",
    "swarm",
    "distributed",
    "llm",
    "inference",
    "edge-computing",
    "async",
    "fastapi",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]

dependencies = [
    # Web Framework & Server
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",

    # Async HTTP Clients
    "httpx>=0.27",
    "aiohttp>=3.9",

    # Data Validation
    "pydantic>=2.0",
    "pydantic-settings>=2.2",

    # Communication
    "twilio>=9.0",
    "websockets>=12.0",

    # Configuration & Utilities
    "pyyaml>=6.0.1",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "tenacity>=8.2",

    # Networking / Mesh (optional)
    "tailscale-cli ; platform_system != 'Windows'",

    # Compression (zipfile36 for legacy compatibility)
    "zipfile36>=0.1.3 ; python_version < '3.13'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "httpx>=0.27",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/simplepod/swarm"
Documentation = "https://github.com/simplepod/swarm/docs"
Repository = "https://github.com/simplepod/swarm.git"
Issues = "https://github.com/simplepod/swarm/issues"

[project.scripts]
simplepod = "simplepod.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simplepod"]

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
    "TCH", # flake8-type-checking
]
ignore = [
    "D100",  # Missing docstring in public module (handled by ELI5 style)
    "D104",  # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ── MyPy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/simplepod",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]
markers = [
    "unit: Unit tests — testing one outlet at a time.",
    "integration: Integration tests — full circuit load calculation.",
    "slow: Tests that take >5 seconds — like a full panel schedule audit.",
]

# ── Coverage ────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/simplepod"]
omit = [
    "*/tests/*",
    "*/scripts/*",
    "*/ui/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
